Deployment.gatekeeper-controller-manager.yml
---
# Source: gatekeeper/templates/gatekeeper-controller-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    helm.sh/chart: gatekeeper-3.21.1
    app.kubernetes.io/name: gatekeeper
    app.kubernetes.io/instance: gatekeeper
    app.kubernetes.io/version: "3.21.1"
    app.kubernetes.io/managed-by: Helm
    app: 'gatekeeper'
    chart: 'gatekeeper'
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
    gatekeeper.sh/system: "yes"
    heritage: 'Helm'
    release: 'gatekeeper'
  name: gatekeeper-controller-manager
  namespace: 'gatekeeper-system'
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: 'gatekeeper'
      chart: 'gatekeeper'
      control-plane: controller-manager
      gatekeeper.sh/operation: webhook
      gatekeeper.sh/system: "yes"
      heritage: 'Helm'
      release: 'gatekeeper'
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        helm.sh/chart: gatekeeper-3.21.1
        app.kubernetes.io/name: gatekeeper
        app.kubernetes.io/instance: gatekeeper
        app.kubernetes.io/version: "3.21.1"
        app.kubernetes.io/managed-by: Helm
        app: 'gatekeeper'
        chart: 'gatekeeper'
        control-plane: controller-manager
        gatekeeper.sh/operation: webhook
        gatekeeper.sh/system: "yes"
        heritage: 'Helm'
        release: 'gatekeeper'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: gatekeeper.sh/operation
                      operator: In
                      values:
                        - webhook
                topologyKey: kubernetes.io/hostname
              weight: 100
      automountServiceAccountToken: true
      containers:
        - image: openpolicyagent/gatekeeper:v3.21.1
          args:
            - --port=8443
            - --health-addr=:9090
            - --prometheus-port=8888
            - --logtostderr
            - --log-denies=false
            - --admission-events-involved-namespace=false
            - --log-level=INFO
            - --exempt-namespace=gatekeeper-system
            - --operation=webhook
            - --enable-external-data=true
            - --enable-generator-resource-expansion=true
            - --log-mutations=false
            - --mutation-annotations=false
            - --disable-cert-rotation=false
            - --max-serving-threads=-1
            - --tls-min-version=1.3
            - --validating-webhook-configuration-name=gatekeeper-validating-webhook-configuration
            - --mutating-webhook-configuration-name=gatekeeper-mutating-webhook-configuration
            - --external-data-provider-response-cache-ttl=3m
            - --enable-k8s-native-validation=true
            - --metrics-backend=prometheus
            - --operation=mutation-webhook
            - --disable-opa-builtin={http.send}
          command:
            - /manager
          imagePullPolicy: 'IfNotPresent'
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            timeoutSeconds: 1
          name: 'manager'
          ports:
            - containerPort: 8443
              name: webhook-server
              protocol: TCP
            - containerPort: 8888
              name: metrics
              protocol: TCP
            - containerPort: 9090
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9090
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /certs
              name: cert
              readOnly: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      imagePullSecrets: []
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      securityContext:
        fsGroup: 999
        supplementalGroups:
          - 999
      serviceAccountName: gatekeeper-admin
      terminationGracePeriodSeconds: 60
      tolerations: []
      topologySpreadConstraints: []
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: gatekeeper-webhook-server-cert
