constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockCrdDelete
metadata:
  name: block-crd-delete
  namespace: gatekeeper-system
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["CustomResourceDefinition"]
